k8s/deployments/bar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  bar-app
  namespace: default
  labels:
    app:  bar-app
spec:
  selector:
    matchLabels:
      app: bar-app
  template:
    metadata:
      labels:
        app:  bar-app
    spec:
      containers:
      - image: hashicorp/http-echo:latest
        imagePullPolicy: IfNotPresent
        name: "bar"
        args:  
        - "-text=bar"
        ports:
        - containerPort: 5678
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
  namespace: default
spec:
  selector:
    app: bar-app
  type: ClusterIP
  ports:  
  - name: http
    port: 8088
    targetPort: 5678
    protocol: TCP
