k8s/deployments/foo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  foo-app
  namespace: default
  labels:
    app:  foo-app
spec:
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      labels:
        app:  foo-app
    spec:
      containers:
      - image: hashicorp/http-echo:latest
        imagePullPolicy: IfNotPresent
        name: "foo"
        args:  
        - "-text=foo"
        ports:
        - containerPort: 5678
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  namespace: default
spec:
  selector:
    app: foo-app
  type: ClusterIP
  ports:  
  - name: http
    port: 8080
    targetPort: 5678
    protocol: TCP
